Only replace keywords in text files

Non-text files such as PNG and compressed SVG were being read in for
keyword substitution and then written back out as text, even if no
substitions were made. As a result they were corrupt in the generated
project.

If the mimetype of a file does not descend from text/plain, the file
will no longer be considered for keyword substitution.

Addtionally, only changed files are written.

BUG: 502500


(cherry picked from commit de5cd429631810c9a7dbaa24e27ec03fb2517d01)

Co-authored-by: Eli MacKenzie <argonel@gmail.com>